# fastapi-project

./: .env-non-dev  .env-render  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
auth/: auth.py  database.py  manager.py  schemas.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 2023_09_21_1818-9700c9ed4340_fix_models.py  2023_09_25_1901-8bf34a8a3e79_add_messages.py  21-09-2023_add_oper_model.py  27553cf68037_database_creation.py  50993dbf19b1_initial.py  bb598edcf949_add_operation.py
models/: models.py
src/: config.py  main.py
src/auth/: base_config.py  manager.py  models.py  schemas.py
src/chat/: models.py  router.py  ws_messages.txt
src/operations/: models.py  router.py  schemas.py
src/pages/: router.py
src/static/: static_file.jpg:Zone.Identifier
src/tasks/: router.py  tasks.py
src/templates/: search.html
tests/: conftest.py  test_auth.py  test_operation.py
